CME-116: remove serenity properties file added